--- a/src/components/BeerList/style.css
+++ b/src/components/BeerList/style.css
@@ -2,19 +2,42 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
+  width: 100%;
   max-width: 900px;
-  padding: 0 1rem;
+  padding: 0;
   box-sizing: border-box;
   margin-top: 40px;
+
+  & .filters {
+    display: flex;
+    box-sizing: content-box;
+    width: calc(100% - 22px);
+
+    & > * {
+      margin: 0 5px;
+    }
+
+    @media (max-width: 481px) {
+      flex-direction: column;
+
+      & > * {
+        margin: 5px;
+      }
+    }
+  }
 
   & .results {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    box-sizing: border-box;
+    width: 100%;
+    margin-top: 10px;
 
     & > div {
-      max-width: 45%;
+      max-width: calc(50% - 20px);
       margin: 10px;
     }
 
